--- a/app/views/cat_rental_requests/_form.html.erb
+++ b/app/views/cat_rental_requests/_form.html.erb
@@ -4,7 +4,9 @@
   <% if cat_request.persisted? %>
     <input type="hidden" name="_method" value='PATCH'>
   <% end %>
-
+  <input type="hidden"
+          name="authenticity_token"
+          value="<%= form_authenticity_token %>">
   <label>Cat
     <select name="cat_rental_request[cat_id]" value="">
       <% cats.each do |cat| %>
