--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -10,7 +10,7 @@
 </table>
 <br>
 <h2>Requests</h2>
-<div class='col-md-6'>
+<div class='container-fluid'>
 <table>
   <thead>
     <th>Start Date</th><th>End Date</th><th>Status</th>
@@ -31,4 +31,4 @@
 </table>
 </div>
 <br>
-<%= link_to 'Cats index', cats_url %>
+<div class='container-fluid'><%= button_to 'Cats index', cats_url, method: :get, class: 'btn btn-primary' %></div>
