--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,24 @@
   <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-  <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% if current_user %>
+  <div class="page-header">
+    <h1>Hi <%= current_user.user_name %>!</h1> <%= button_to 'Logout', session_url, method: :delete, class: 'btn btn-danger' %>
+  </div>
+<% else %>
+  <%= button_to 'Go to sign in page', new_session_url, method: :get, class: 'btn btn-primary' %>
+<% end %>
+
+<% flash.each do |type, messages| %>
+  <% messages.each do |message| %>
+   <div><%= message %></div>
+ <% end %>
+<% end %>
 
 <%= yield %>
 
